assets/css/edit.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	box-sizing: border-box;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/** end reset css**/
html{
	scroll-behavior: smooth;
}
/** common classes **/
.edit {
	height: 18px;
	width: 75px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	cursor: pointer;
}
i{
	font-size: 15px;
}
.btn-submit {
	font-family: 'Syne';
	font-weight: 700;
	border-radius: 60px ;
}
.bg-green {
	color: white;
	background-color: #1D6154;
}
.bg-blue {
	color: #306685;
	background-color: #CBD6DC;
}
.bg-grey {
	color: #FFFFFF;
	background-color: #A7A7A7;
}
.bg-red {
	color: #FFFFFF;
	background-color: red;
}
button {
	border: none;
}
.no-decoration {
	text-decoration: none;
	color: black;
	cursor: default;
}
/*************************/
body{
	font-family: 'Work Sans' ;
}

.edit-bar {
	height: 59px;
	display: flex;
	justify-content: center;
	align-items: center;
	cursor: default;
	background-color: black;
}
.edit-bar .edit {
	width: 120px;
	color: white;
	cursor: inherit;
}
.title-bar {
	margin-left: 21px;
	padding: 11px 23px;
	font-weight: 500;
	border-radius: 30px;
	background-color: white;
}
.main-container {
	max-width: 1140px;
	margin:auto;
	font-size: 14px;
}
header {
	display: flex;
	justify-content: space-between;
	margin: 50px 0
}
section {
	margin: 50px 0
}
h1{
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 22px;
	font-weight: 800;
	cursor: default;
	color: #B1663C
}
h1 > span {
	font-family: 'Work Sans';
	font-size:10px;
	letter-spacing: 0.1em;
}
h2{
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154
}
nav ul {
	display: flex;
	align-items: center;
	list-style-type: none;
}
nav li {
	padding: 0 10px;
	font-size: 1.2em;
}
.nav-link:hover {
	color: #B1663C;
	cursor: default;
}

#introduction {
	display: flex;
	align-items: center;
}
#introduction figure {
	flex: 1
}
#introduction .edit {
	position: relative;
	top: 15px;
	left: 10%;
}
#introduction img {
	display: block;
	margin: auto;
	width: 80%;
}
#introduction article {
	flex: 1
}
#introduction article .edit {
	position: relative;
	top: -25px;
	left: 0;
}
#introduction .edit p {
	margin: 0;
}
#introduction h2 {
	margin-bottom: 1em;
}
#introduction p {
	margin-bottom: 0.5em;
}
#portfolio {
	position: relative;
}
#portfolio h2 {
	text-align: center;
}
#portfolio .title {
	margin-bottom: 1em;
	font-size: 30px;
	display: flex;
	justify-content: center;
	align-items: center;
}
#portfolio .edit {
	position: relative;
	left: 31px;
	font-size: 14px;
}

/*Build Modal-1*/
.msg-success {
	width: 150px;
	padding: 15px;
	display: none;
	position: fixed;
	top: 90%;
	left: 10%;
	text-align: center;
	border-radius: 10px;
	color: #FFFFFF;
	z-index: 10;
}
#modal {
	width: 630px;
	border: none;
	outline: 0;
	border-radius: 10px;
	padding: 0;
}
.modal-container {
	padding: 26px 20px 48px 20px;
	text-align: center;
}
#modal::backdrop {
	background-color: rgba(0, 0, 0, 0.8);
}
.modal-close {
	display: flex;
	justify-content: end;
}
.close-icon {
	font-size: 24px;
	cursor: default;
}
.modal-title {
	font-size: 26px;
	font-weight: 400;
	margin-top: 10px;
}
.modal-section {
	width: 65%;
	margin: 0 auto;
}
.border-grey {
	border-bottom: 1px solid grey;
}
.modal-articles {
	padding: 46px 0 47px 0;
	display: grid;
	grid-template-columns: repeat(5, 1fr);
	grid-auto-rows: 1fr;
	gap: 10px 6px;
}
.modal-articles article {
	position: relative;
}
.trash-icon {
	padding: 4px;
	position: absolute;
	top: 5%;
	left: 70%;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 2px;
	background-color: black;
}
.trash-icon:hover {
	animation: trash-shaking .25s linear forwards infinite;
}
@keyframes trash-shaking {
	0% { transform: rotate(0deg); }
	25% { transform: rotate(25deg); }
	50% { transform: rotate(0deg); }
	75% { transform: rotate(-25deg); }
	100% { transform: rotate(0deg); }
}
.fa-trash-can {
	font-size: 9px;
	color: white;
}
.modal-container  article img {
	height: 102px;
	width: 100%;
	display: block;
	object-fit: cover;
}
.modal-edit {
	text-align: left;
	cursor: default;
}
.modal-add {
	margin: 38px 0 23px 0;
	padding: 9px 48px;
}
.modal-delete {
	width: 150px;
	margin: 0 auto;
	color: red;
	cursor: default;
}
.empty-gallery {
	font-style: italic;
	color: #306685;
}
.font-20-text-center{
	font-size: 20px;
	text-align: center;
}

/*Modal Form*/
.modal-header {
	display: flex;
	justify-content: space-between;
}
.modal-project {
	padding-top: 36px;
}
.modal-form-1 {
	height: 169px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: #E8F1F7;
}
.label-image {
	margin: 21px 0 7px 0;
	padding: 10px 33px;
}
#modal-form-image {
	display: none;
}
.modal-form-1 p {
	font-size: 10px;
}
.display-image {
	height: 169px;
	object-fit: cover;
}
.modal-form-2 {
	padding-bottom: 47px;
	text-align: left;
	display: flex;
	flex-direction: column;
}
.label-title {
	margin: 0 0 1em 0;
}
.label-style {
	margin: 2em 0 1em 0;
}
.input-style{
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
.fa-image {
	font-size: 45px;
	color: #CBD6DC;
}
.modal-validate {
	width: 237px;
	margin: 32px 0 7px 0;
	padding: 10px 49px;
}
.msg {
	margin-top: 10px;
	text-align: center;
	color: red;
}

/* Gallery */
#gallery {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column-gap: 20px;
	grid-row-gap: 20px;
}
#gallery img {
	width: 100%;
}
#contact {
	width: 50%;
	margin: auto;
}
#contact > * {
	text-align: center;

}
#contact form {
	text-align: left;
	display: flex;
	flex-direction: column;
}
#contact h2{
	margin-bottom: 20px;
}
#contact input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
#contact label {
	margin: 2em 0 1em 0;
}
#contact textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
input[type="submit"]{
	margin : 2em auto ;
	width: 180px;
	text-align: center;
}
footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em
}

